@@ -1,0 +1,12 @@
+class Null(object):
+    def __new__(cls, *args, **kwargs):
+        if '_inst' not in vars(cls):
+            cls._inst = super(Null, cls).__new__(cls, *args, **kwargs)
+        return cls._inst
+    def __init__(self, *args, **kwargs): pass
+    def __call__(self, *args, **kwargs): return self
+    def __repr__(self): return "Null()"
+    def __nonzero__(self): return False
+    def __getattr__(self, name): return self
+    def __setattr__(self, name, value): return self
+    def __delattr__(self, name): return self
